force-app/main/default/objects/Volunteer__c/fields/Badge_Image__c.field-meta.xml
<CustomField>
    <fullName>Badge_Image__c</fullName>
    <description>Display badge image according to badge picklist values.</description>
    <formula>CASE(
    Badge__c,
    &quot;Gold&quot;, &quot;🥇 Gold&quot;,
    &quot;Silver&quot;, &quot;🥈 Silver&quot;,
    &quot;Bronze&quot;, &quot;🥉 Bronze&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Badge</label>
    <type>Text</type>
</CustomField>