force-app/main/default/objects/Volunteer__c/fields/image_url__c.field-meta.xml
<CustomField>
    <fullName>image_url__c</fullName>
    <label>image url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>