force-app/main/default/objects/Volunteer__c/fields/Last_Participation_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Participation_Date__c</fullName>
    <label>Last Participation Date</label>
    <summarizedField>Drive_Participation__c.CreatedDate</summarizedField>
    <summaryForeignKey>Drive_Participation__c.Volunteer__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>