force-app/main/default/objects/Volunteer__c/fields/Total_Attended_Drive__c.field-meta.xml
<CustomField>
    <fullName>Total_Attended_Drive__c</fullName>
    <label>Total Attended Drive</label>
    <summaryFilterItems>
        <field>Drive_Participation__c.Attendance_Status__c</field>
        <operation>equals</operation>
        <value>Attended</value>
    </summaryFilterItems>
    <summaryForeignKey>Drive_Participation__c.Volunteer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>