force-app/main/default/objects/Volunteer__c/fields/Total_Drives_Participated__c.field-meta.xml
<CustomField>
    <fullName>Total_Drives_Participated__c</fullName>
    <label>Total Drives Participated</label>
    <summaryForeignKey>Drive_Participation__c.Volunteer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>