force-app/main/default/objects/Volunteer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Attended_Drive__c</columns>
    <columns>Points__c</columns>
    <columns>Badge_Image__c</columns>
    <columns>Total_Drives_Participated__c</columns>
    <columns>Total_Hours_Contributed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>